--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url= jdbc:mysql://localhost:3306/CL1_ALUMNOS?useSSL=false
+spring.datasource.username= root
+spring.datasource.password= toor
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+
+
+
 
